# manta-test-hs

./: READEME.md  manta-test-hs.cabal  stack.yaml
src/: Main.hs
